Fb tomee migration (#1)
* Jaas Login Module

* cdi problems

* JMS and refactoring

* Mail

* Web Services

* Security Realm

* openejb descriptor

* WS Clients

* Tests

* securitry tests

* Clean-up

* Security libs

* Fix persistence and openejb

* Added new libraries for tomee to ivy build

* Fixed ivy dependencies

* Removed WSCallback

* Fixed remote EJB calling.

* Modified webservices.

* Modified ejbs.

* Missing library added

* Resolved compilation problem during building

* Changes for APP with tomee

* Reverting logger back to injected

* Fix classpaths for tomee

* Fix merge errors

* Missing dependencies partially fixed

* Indexer is packaged into oscm.ear. Rewriting messages between queues is removed.

* Commented out SAML and webservices-osgi.

* Builod problems solved

* Build all fixed

* Indexer is packaged into oscm.ear. Rewriting messages between queues is removed.

* Moving annotations from interfaces to beans class.

* Making interface public.

* Fix for webservices in APP

* Adding enumerated into entities instead of converters.

* Removal of jms indexing. Indexing is being triggered from hibernateeventlistener directly.

* Adding missing role definition.

* Removal of programmatic login from filters.

* Modified lookup for beans in jndi.

* Problem with finding WSDLs solved

* Prove of concept

* Prove of concept

* Modified deployment descriptor for tomcat-example instance.

* Modified hibernate listener and introduced external bean for indexing from it.

* Modified jndi names for queues.

* Refactor imports.

* Removal of search projects.

* Modified buildscripts after removal of projects.

* Added logging out.

* Added postconstruct method to hibernate indexer.

* Indexing at server start forced.

* Removed commented out properties.

* Modified operator client.

* Fixing nonexistencconversationfilter.

* Removal of commented out co